--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
     <h1>CMPM 163</h1>
     <a href="A.html">A.html</a>
+    <a href="B.html">B.html</a>
+    <a href="C.html">C.html</a>
+    <a href="Homework1D.pdf">Homework1D.pdf</a>
 </body>
 </html>
