--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>CMPM 163</h1>
+    <a href="A.html">A.html</a>
+    <a href="B.html">B.html</a>
+    <a href="C.html">C.html</a>
+    <a href="Homework1D.pdf">Homework1D.pdf</a>
 </body>
 </html>
