--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <body>
     <h1>CMPM 163</h1>
-    <a href="A.html">A.html</a>
-    <a href="B.html">B.html</a>
-    <a href="C.html">C.html</a>
-    <a href="Homework1D.pdf">Homework1D.pdf</a>
+    <a href="Homework1/Homework1.html">Homework 1.html</a>
+    <a href="Homework2/Homework2.html">Homework 2.html</a>
 </body>
 </html>
